--- a/index.html
+++ b/index.html
@@ -54,16 +54,22 @@
       </div>
     </article>
   </main>
- 
-
-  
- 
-  
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer class="attribution">
+    <div>
+      Challenge by
+      <a
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Frontend Mentor</a
+      >. Coded by
+      <a
+        href="https://github.com/vanderms"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Vander Santos</a
+      >.
+    </div>
+  </footer>
 </body>
 </html>
