--- a/index.html
+++ b/index.html
@@ -1,75 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Article preview component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" href="style.css">
+    <title>Frontend Mentor | Article preview component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
 
-  <main>
-    <article class="card">
-      <img src="./images/drawers.jpg" alt="thumbnail" class="thumbnail">
-      <div class="content">
-        <header>
-          <h1> Shift the overall look and feel by adding these wonderful 
-            touches to furniture in your home</h1>
-        </header>
-        <p>Ever been in a room and felt like something was missing? Perhaps 
-          it felt slightly bare and uninviting. I've got some simple tips 
-          to help you make any room feel complete.
-        </p>
-        <div class="author-and-share">
-          <div class="author">
-            <img src="./images/avatar-michelle.jpg" alt="avatar" class="avatar">
-            <div>
-              <div class="name">Michelle Appleton</div>
-              <div class="date">28 Jun 2020</div>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <article class="card">
+        <img src="./images/drawers.jpg" alt="thumbnail" class="thumbnail" />
+        <div class="content">
+          <header>
+            <h1>
+              Shift the overall look and feel by adding these wonderful touches
+              to furniture in your home
+            </h1>
+          </header>
+          <p>
+            Ever been in a room and felt like something was missing? Perhaps it
+            felt slightly bare and uninviting. I've got some simple tips to help
+            you make any room feel complete.
+          </p>
+          <div class="author-and-share">
+            <div class="author">
+              <img
+                src="./images/avatar-michelle.jpg"
+                alt="avatar"
+                class="avatar"
+              />
+              <div>
+                <div class="name">Michelle Appleton</div>
+                <div class="date">28 Jun 2020</div>
+              </div>
+            </div>
+            <div class="share">
+              <button class="share-button" aria-label="share button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
+                  <path
+                    fill="#6E8098"
+                    d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"
+                  />
+                </svg>
+              </button>
+              <div class="pop-over-modal">
+                <div class="pop-over-backdrop"></div>
+                <div class="pop-over">
+                  <span class="triangle"></span>
+                  <span class="text">Share</span>
+                  <a href="#" aria-label="share facebook"
+                    ><img src="./images/icon-facebook.svg" alt="facebook icon"
+                  /></a>
+                  <a href="#" aria-label="share twitter"
+                    ><img src="./images/icon-twitter.svg" alt="twitter icon"
+                  /></a>
+                  <a href="#" aria-label="share pinterest"
+                    ><img
+                      src="./images/icon-pinterest.svg"
+                      alt="pinterest icon"
+                  /></a>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="share">
-            <div class="pop-over">
-              <span class="text">Share</span>
-              <a href="#" aria-label='share facebook'><img src="./images/icon-facebook.svg" alt="facebook icon"></a>
-              <a href="#" aria-label='share twitter'><img src="./images/icon-twitter.svg" alt="twitter icon"></a>
-              <a href="#" aria-label='share pinterest'><img src="./images/icon-pinterest.svg" alt="pinterest icon"></a>
-            </div>
-          </div>
-          <button class="share-button" aria-label='share button'><img src="./images/icon-share.svg" alt="share icon"></button>
-        </div>        
+        </div>
+      </article>
+    </main>
+
+    <footer class="attribution">
+      <div>
+        Challenge by
+        <a
+          href="https://www.frontendmentor.io?ref=challenge"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Frontend Mentor</a
+        >. Coded by
+        <a
+          href="https://github.com/vanderms"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Vander Santos</a
+        >.
       </div>
-    </article>
-  </main>
-  <footer class="attribution">
-    <div>
-      Challenge by
-      <a
-        href="https://www.frontendmentor.io?ref=challenge"
-        target="_blank"
-        rel="noopener noreferrer"
-        >Frontend Mentor</a
-      >. Coded by
-      <a
-        href="https://github.com/vanderms"
-        target="_blank"
-        rel="noopener noreferrer"
-        >Vander Santos</a
-      >.
-    </div>
-  </footer>
-</body>
+    </footer>
+
+    <script src="main.js"></script>
+  </body>
 </html>
