implement responsive design

--- a/index.html
+++ b/index.html
@@ -70,23 +70,18 @@
                   />
                 </svg>
               </button>
-              <div class="pop-over-modal">
-                <div class="pop-over-backdrop"></div>
-                <div class="pop-over">
-                  <span class="triangle"></span>
-                  <span class="text">Share</span>
-                  <a href="#" aria-label="share facebook"
-                    ><img src="./images/icon-facebook.svg" alt="facebook icon"
-                  /></a>
-                  <a href="#" aria-label="share twitter"
-                    ><img src="./images/icon-twitter.svg" alt="twitter icon"
-                  /></a>
-                  <a href="#" aria-label="share pinterest"
-                    ><img
-                      src="./images/icon-pinterest.svg"
-                      alt="pinterest icon"
-                  /></a>
-                </div>
+              <div class="pop-over">
+                <span class="triangle"></span>
+                <span class="text">Share</span>
+                <a href="#" aria-label="share facebook"
+                  ><img src="./images/icon-facebook.svg" alt="facebook icon"
+                /></a>
+                <a href="#" aria-label="share twitter"
+                  ><img src="./images/icon-twitter.svg" alt="twitter icon"
+                /></a>
+                <a href="#" aria-label="share pinterest"
+                  ><img src="./images/icon-pinterest.svg" alt="pinterest icon"
+                /></a>
               </div>
             </div>
           </div>
